added a click listener which will be triggered when our button is touched

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">News search</string>
+    <string name="app_name">NEWS SEARCH</string>
+    <string name="search_news">Search news</string>
 </resources>
